Chore: Replace `Arrays.asList` with `List.of` in test classes to simplify list initialization